[tool.poetry]
name = "thymus"
version = "0.1.7"
description = "A browser for network configuration files"
authors = ["Igor Malyushkin <gmalyushkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
textual = "0.44.1"
thymus-ast = "^0.1.6"
asyncssh = "^2.14.1"
telnetlib3 = "^2.0.4"
bcrypt = "^4.1.1"


[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore = ["E721"]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
